--- a/chair_shop/src/index.css
+++ b/chair_shop/src/index.css
@@ -1,12 +1,17 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'minecraft';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url(./Assets/wood.png);
 }
 
+@font-face {
+    font-family: "minecraft";
+    src: url("./Fonts/minecraft.ttf");
+    font-weight: normal;
+    font-size: normal;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
