--- a/chair_shop/src/App.css
+++ b/chair_shop/src/App.css
@@ -4,6 +4,9 @@ header, footer{
   background: burlywood;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
+  -webkit-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2) inset;
+  -moz-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2) inset;
+  box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2) inset;
 }
 footer{
   padding: 50px;
@@ -27,4 +30,33 @@ input{
 }
 ::placeholder {
   color: rgb(227, 155, 143);
+}
+nav, aside{
+  background-image: url(./Assets/wallpaper2.jpg);
+  width: 300px;
+  padding: 10px;  
+  display: grid;
+  place-items: center;
+  border-bottom-right-radius: 10px;
+  border-top-right-radius: 10px;
+  -webkit-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2) inset;
+  -moz-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2) inset;
+  box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2) inset;
+}
+aside{
+  border-bottom-right-radius: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
+}
+h1, h2{
+  background: local;
+}
+h1{
+  background:rgba(255, 255, 255, 0.7);
+}
+.imgUser{
+  width: 150px;
+  height: 150px;
+  border-radius: 100%;
 }
