--- a/front_chair/src/index.css
+++ b/front_chair/src/index.css
@@ -1,3 +1,11 @@
+#root {
+  max-width: 1470px;
+  padding: 0;
+  margin: 0 auto;
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
 *{
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'minecraft';
@@ -16,3 +24,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
