--- a/front_chair/src/App.css
+++ b/front_chair/src/App.css
@@ -1,4 +1,4 @@
-header, footer{
+header{
   padding: 25px;
   box-sizing: border-box;
   background: burlywood;
@@ -7,29 +7,55 @@ header, footer{
   -webkit-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2) inset;
   -moz-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2) inset;
   box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2) inset;
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
 }
 footer{
   padding: 50px;
+  box-sizing: border-box;
+  background: burlywood;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
-  border-bottom-left-radius: 0px;
-  border-bottom-right-radius: 0px;
+  -webkit-box-shadow: 0px 5px 10px 2px rgba(108, 90, 90, 0.2) inset;
+  -moz-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2) inset;
+  box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2) inset;
   text-align: center;
 }
 form {
   width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-input{
+input, button, .tar, .tadm, .templo{
   padding: 10px;
   border-radius: 10px;
   background: antiquewhite;
   font-size: 14px;
-  margin: 5px;
-  width: 300px;
+  margin: 5px 0;
+  width: 100%; 
+  max-width: 300px; 
   box-sizing: border-box;
+  transition: 0.5s;
+  cursor:pointer;    
 }
 ::placeholder {
   color: rgb(227, 155, 143);
+}
+button:hover{
+  background-color: #f89d13;
+}
+button:active{
+  background-color: #F84F12;
+}
+button:focus{
+  outline: 3px solid #BAF812;
+}
+.tar{
+  background: local;
+  display: flex;
+  max-width: 600px; 
 }
 nav, aside{
   background-image: url(./Assets/wallpaper2.jpg);
@@ -55,8 +81,22 @@ h1, h2{
 h1{
   background:rgba(255, 255, 255, 0.7);
 }
+.AuRegMenu{
+  display: flex;
+  flex-direction: column; 
+  justify-content: center; 
+  align-items: center; 
+  height: 100vh;
+  gap: 20px;
+}
 .imgUser{
   width: 150px;
   height: 150px;
   border-radius: 100%;
+}
+.iconHeader{
+  width: 80px;
+  height: 80px;
+  background: local;
+  margin: 0px 15px 0px 7px;
 }
