--- a/front_chair/src/App.css
+++ b/front_chair/src/App.css
@@ -28,7 +28,7 @@ form {
   flex-direction: column;
   align-items: center;
 }
-input, button, .tar, .tadm, .templo{
+input, button, select, option, .tadm, .templo{
   padding: 10px;
   border-radius: 10px;
   background: antiquewhite;
@@ -61,33 +61,17 @@ nav, aside{
   background-image: url(./Assets/wallpaper2.jpg);
   width: 300px;
   padding: 10px;  
-  display: grid;
-  place-items: center;
-  border-bottom-right-radius: 10px;
-  border-top-right-radius: 10px;
+  border-radius: 10px;
   -webkit-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2) inset;
   -moz-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2) inset;
   box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2) inset;
 }
-aside{
-  border-bottom-right-radius: 0px;
-  border-top-right-radius: 0px;
-  border-bottom-left-radius: 10px;
-  border-top-left-radius: 10px;
-}
-h1, h2{
+
+h1, h2, h4{
   background: local;
 }
 h1{
   background:rgba(255, 255, 255, 0.7);
-}
-.AuRegMenu{
-  display: flex;
-  flex-direction: column; 
-  justify-content: center; 
-  align-items: center; 
-  height: 100vh;
-  gap: 20px;
 }
 .imgUser{
   width: 150px;
@@ -99,4 +83,57 @@ h1{
   height: 80px;
   background: local;
   margin: 0px 15px 0px 7px;
+}
+.menu{
+  display: grid;
+	grid-template-rows: 1fr;
+	grid-template-columns: repeat(5, 1fr);
+	gap: 0px;
+	width: 100%;
+	height: 100%;
+}
+.goods{
+  grid-area: 1 / 2 / 3 / 5;
+	background-color: rgba(225,99,131, 0.5);
+  height: 600px;
+}
+.container{
+  display: grid;
+  place-items: center;
+  background: local;
+}
+.content{
+  align-items: center;
+  overflow-y: scroll;
+  margin: 10px 0px;
+  background: local;
+  height: 89%;
+  width: 100%;
+}
+ul{
+  display: grid;
+	grid-template-rows: 1fr;
+	grid-template-columns: repeat(4, 1fr);
+	gap: 10px;
+	height: 150px;
+  padding: 15px;
+  list-style-type:none;
+}
+li{
+  background: aliceblue;
+  border-radius: 10px;
+  padding: 5px;
+  place-items: center;
+  display: flex;
+  flex-direction: column;
+}
+.imgCatalog{
+  width: 150px;
+  height: 150px;
+  background: local;
+}
+.basket{
+  display: flex;
+  flex-direction: column;
+  background:local;
 }
