--- a/front_chair/src/App.css
+++ b/front_chair/src/App.css
@@ -66,8 +66,7 @@ nav, aside{
   -moz-box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2) inset;
   box-shadow: 0px 5px 10px 2px rgba(0, 0, 0, 0.2) inset;
 }
-
-h1, h2, h4{
+h1, h2, h4, p{
   background: local;
 }
 h1{
@@ -110,14 +109,16 @@ h1{
   height: 89%;
   width: 100%;
 }
+
 ul{
   display: grid;
 	grid-template-rows: 1fr;
-	grid-template-columns: repeat(4, 1fr);
+	grid-template-columns: repeat(3, 1fr);
 	gap: 10px;
 	height: 150px;
   padding: 15px;
   list-style-type:none;
+  background: local;
 }
 li{
   background: aliceblue;
